html content added

--- a/pages/policy.html
+++ b/pages/policy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hisab Tracker - Your Personal Finance Command Center</title>
+    <title>Privacy Policy - Hisab Tracker</title>
     <meta
       name="description"
       content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
@@ -35,6 +35,7 @@
     <!-- Home Page Specific Styles -->
     <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/policy.css" />
   </head>
 
   <body>
@@ -77,120 +78,144 @@
         </div>
       </div>
     </header>
+    <main class="policy-page">
+      <div class="policy-card" data-aos="fade-up">
+        <h1>Privacy Policy</h1>
+        <p class="policy-updated">Last updated: January 2026</p>
 
-    <!-- About Section -->
-    <section class="about-hero" id="about">
-      <div class="container">
-        <div class="about-wrapper" data-aos="fade-up">
-          <h1>About Hisab Tracker</h1>
-          <p class="subtitle">
-            Hisab Tracker is a simple and reliable personal finance app designed
-            to help people understand, control, and grow their money with
-            confidence.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="about-content">
-      <div class="container">
-        <div class="about-grid">
-          <div class="about-text" data-aos="fade-right">
-            <h2>Our Story</h2>
-            <p>
-              Managing money should not be complicated or stressful. Many people
-              want to track their daily expenses but feel overwhelmed by complex
-              apps, internet dependency, and fear of losing their data.
-            </p>
-            <p>
-              Hisab Tracker was created to solve this problem by offering a
-              clean, offline-first, and easy-to-use experience. Whether you are
-              a student, a homemaker, a shop owner, or a working professional,
-              the app helps you keep your financial records safe and organized
-              without any technical knowledge.
-            </p>
-            <p>
-              The goal is simple: make daily money tracking a habit, not a
-              burden.
-            </p>
-          </div>
-
-          <div class="about-image" data-aos="fade-left">
-            <i class="fas fa-book-open"></i>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="mission-section">
-      <div class="container">
-        <div class="mission-grid">
-          <div class="mission-card" data-aos="zoom-in">
-            <i class="fas fa-bullseye"></i>
-            <h3>Our Mission</h3>
-            <p>
-              To empower individuals and families with a simple tool that brings
-              clarity, discipline, and peace of mind in managing their finances.
-            </p>
-          </div>
-
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="150">
-            <i class="fas fa-lock"></i>
-            <h3>Privacy & Trust</h3>
-            <p>
-              Your data always belongs to you. Hisab Tracker works offline and
-              gives you full control over when and how your data is backed up or
-              synced.
-            </p>
-          </div>
-
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="300">
-            <i class="fas fa-lightbulb"></i>
-            <h3>Built for Real Life</h3>
-            <p>
-              Designed for everyday use, with a focus on simplicity, speed, and
-              reliability, even in low or no internet conditions.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="values-section">
-      <div class="container">
-        <h2 data-aos="fade-up">What We Believe In</h2>
-        <div class="values-list">
-          <div class="value-item" data-aos="fade-up">
-            <i class="fas fa-check-circle"></i>
-            <span>Simplicity over complexity</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="100">
-            <i class="fas fa-check-circle"></i>
-            <span>Security and data ownership</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="200">
-            <i class="fas fa-check-circle"></i>
-            <span>Offline-first reliability</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="300">
-            <i class="fas fa-check-circle"></i>
-            <span>Designed for Indian users and daily needs</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="cta-about">
-      <div class="container" data-aos="fade-up">
-        <h2>Begin Your Daily Hisab Journey</h2>
         <p>
-          Start tracking your income and expenses with confidence, clarity, and
-          control. Hisab Tracker is here to make money management simple for
-          everyone.
+          Hisab Tracker (“we”, “our”, “us”) respects your privacy and is
+          committed to protecting your personal data. This Privacy Policy
+          explains how we collect, use, store, and safeguard your information
+          when you use the Hisab Tracker mobile application, website, and
+          related services.
         </p>
-        <a href="#download" class="cta-button">Download Free</a>
+
+        <h2>1. Information We Collect</h2>
+        <p>
+          We collect only the information necessary to operate and improve the
+          app:
+        </p>
+        <ul>
+          <li>
+            Contact information such as name and email when you contact support
+            or submit feedback.
+          </li>
+          <li>
+            Device information including model, OS version, and crash logs for
+            stability and security.
+          </li>
+          <li>
+            Usage data to understand app performance and improve features.
+          </li>
+          <li>
+            Optional cloud backup data if you explicitly enable synchronization.
+          </li>
+        </ul>
+
+        <h2>2. Financial & Transaction Data</h2>
+        <p>
+          All your financial records, transactions, balances, and notes are
+          stored locally on your device by default. We do not access, read,
+          analyze, sell, or share your personal financial data. If you enable
+          cloud backup, your data is encrypted and stored securely only for
+          restoration purposes.
+        </p>
+
+        <h2>3. How We Use Your Information</h2>
+        <ul>
+          <li>To provide and maintain app functionality.</li>
+          <li>To improve performance, reliability, and user experience.</li>
+          <li>To respond to support queries and technical issues.</li>
+          <li>
+            To notify you about important updates, security alerts, and policy
+            changes.
+          </li>
+        </ul>
+
+        <h2>4. Data Security</h2>
+        <p>
+          We use industry-standard security practices including encryption,
+          secure servers, access control, and regular security reviews. Your
+          data is protected against unauthorized access, alteration, disclosure,
+          and destruction.
+        </p>
+
+        <h2>5. Cloud Backup & Sync</h2>
+        <p>
+          Cloud backup is optional. When enabled, your data is encrypted in
+          transit and at rest. Only you can restore your data using your
+          authenticated account. We do not read or use your backup data.
+        </p>
+
+        <h2>6. Third-Party Services</h2>
+        <p>We may use trusted third-party services for:</p>
+        <ul>
+          <li>Crash reporting and performance monitoring.</li>
+          <li>Cloud storage and infrastructure.</li>
+          <li>Analytics to improve app quality.</li>
+        </ul>
+        <p>
+          These providers are contractually obligated to protect your data and
+          comply with applicable privacy laws.
+        </p>
+
+        <h2>7. Data Sharing</h2>
+        <p>
+          We do not sell, rent, or trade your personal or financial data to
+          anyone. Information is shared only if legally required by government
+          authorities or to comply with law enforcement.
+        </p>
+
+        <h2>8. User Rights & Control</h2>
+        <p>You have full control over your data. You can:</p>
+        <ul>
+          <li>Export your data at any time.</li>
+          <li>Delete your cloud backup.</li>
+          <li>Uninstall the app to remove local data.</li>
+          <li>Request account deletion where applicable.</li>
+        </ul>
+
+        <h2>9. Data Retention</h2>
+        <p>
+          We retain your information only as long as necessary to provide
+          services and comply with legal obligations. Local data is stored only
+          on your device unless cloud backup is enabled.
+        </p>
+
+        <h2>10. Children’s Privacy</h2>
+        <p>
+          Hisab Tracker is not intended for children under 13 years of age. We
+          do not knowingly collect personal information from children.
+        </p>
+
+        <h2>11. International Users</h2>
+        <p>
+          Your information may be processed on servers located in different
+          countries. We ensure appropriate safeguards are in place to protect
+          your data.
+        </p>
+
+        <h2>12. Policy Updates</h2>
+        <p>
+          We may update this Privacy Policy from time to time. Changes will be
+          posted on this page with a revised date. Continued use of the app
+          implies acceptance of the updated policy.
+        </p>
+
+        <h2>13. Contact Information</h2>
+        <p>
+          If you have questions, concerns, or requests regarding your privacy,
+          contact us at:
+          <br />
+          <strong>
+            <a href="./contact.html">helphisabtracker@gmail.com</a>
+          </strong>
+
+          <!-- <strong>helphisabtracker@gmail.com</strong> -->
+        </p>
       </div>
-    </section>
+    </main>
 
     <!-- Footer -->
     <footer>
@@ -284,7 +309,7 @@
             <h3>Legal</h3>
             <ul class="footer-links">
               <li>
-                <a href="./policy.html"
+                <a href="#"
                   ><i class="fas fa-chevron-right"></i> Privacy Policy</a
                 >
               </li>
