--- a/pages/security.html
+++ b/pages/security.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hisab Tracker - Your Personal Finance Command Center</title>
+    <title>Privacy Policy - Hisab Tracker</title>
     <meta
       name="description"
       content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
@@ -35,6 +35,7 @@
     <!-- Home Page Specific Styles -->
     <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/security.css" />
   </head>
 
   <body>
@@ -77,120 +78,62 @@
         </div>
       </div>
     </header>
+   <section class="security-page" id="data-security">
+  <div class="security-card">
 
-    <!-- About Section -->
-    <section class="about-hero" id="about">
-      <div class="container">
-        <div class="about-wrapper" data-aos="fade-up">
-          <h1>About Hisab Tracker</h1>
-          <p class="subtitle">
-            Hisab Tracker is a simple and reliable personal finance app designed
-            to help people understand, control, and grow their money with
-            confidence.
-          </p>
-        </div>
-      </div>
-    </section>
+    <h1>Data Security</h1>
+    <div class="security-updated">Last updated: January 2026</div>
 
-    <section class="about-content">
-      <div class="container">
-        <div class="about-grid">
-          <div class="about-text" data-aos="fade-right">
-            <h2>Our Story</h2>
-            <p>
-              Managing money should not be complicated or stressful. Many people
-              want to track their daily expenses but feel overwhelmed by complex
-              apps, internet dependency, and fear of losing their data.
-            </p>
-            <p>
-              Hisab Tracker was created to solve this problem by offering a
-              clean, offline-first, and easy-to-use experience. Whether you are
-              a student, a homemaker, a shop owner, or a working professional,
-              the app helps you keep your financial records safe and organized
-              without any technical knowledge.
-            </p>
-            <p>
-              The goal is simple: make daily money tracking a habit, not a
-              burden.
-            </p>
-          </div>
+    <h2>1. Your Data Ownership</h2>
+    <p>
+      You fully own your financial data. Hisab Tracker does not claim any ownership
+      over your transactions, records, or reports.
+    </p>
 
-          <div class="about-image" data-aos="fade-left">
-            <i class="fas fa-book-open"></i>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>2. Local Device Storage</h2>
+    <p>
+      By default, all your data is stored securely on your device.
+      We do not upload your information to our servers unless you explicitly enable cloud backup.
+    </p>
 
-    <section class="mission-section">
-      <div class="container">
-        <div class="mission-grid">
-          <div class="mission-card" data-aos="zoom-in">
-            <i class="fas fa-bullseye"></i>
-            <h3>Our Mission</h3>
-            <p>
-              To empower individuals and families with a simple tool that brings
-              clarity, discipline, and peace of mind in managing their finances.
-            </p>
-          </div>
+    <h2>3. Cloud Sync Protection</h2>
+    <p>
+      If cloud sync is enabled, your data is encrypted during transfer and storage.
+      We use industry standard security practices to prevent unauthorized access.
+    </p>
 
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="150">
-            <i class="fas fa-lock"></i>
-            <h3>Privacy & Trust</h3>
-            <p>
-              Your data always belongs to you. Hisab Tracker works offline and
-              gives you full control over when and how your data is backed up or
-              synced.
-            </p>
-          </div>
+    <h2>4. No Selling of Data</h2>
+    <p>
+      We never sell, rent, or share your personal or financial information with advertisers,
+      marketers, or third parties.
+    </p>
 
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="300">
-            <i class="fas fa-lightbulb"></i>
-            <h3>Built for Real Life</h3>
-            <p>
-              Designed for everyday use, with a focus on simplicity, speed, and
-              reliability, even in low or no internet conditions.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>5. Access Control</h2>
+    <p>
+      Only you can access your data within the app. We do not have access to view,
+      modify, or analyze your personal financial records.
+    </p>
 
-    <section class="values-section">
-      <div class="container">
-        <h2 data-aos="fade-up">What We Believe In</h2>
-        <div class="values-list">
-          <div class="value-item" data-aos="fade-up">
-            <i class="fas fa-check-circle"></i>
-            <span>Simplicity over complexity</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="100">
-            <i class="fas fa-check-circle"></i>
-            <span>Security and data ownership</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="200">
-            <i class="fas fa-check-circle"></i>
-            <span>Offline-first reliability</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="300">
-            <i class="fas fa-check-circle"></i>
-            <span>Designed for Indian users and daily needs</span>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>6. Data Deletion</h2>
+    <p>
+      You can delete all your data at any time directly from the app.
+      If cloud sync is enabled, synced data will also be permanently removed from our servers.
+    </p>
 
-    <section class="cta-about">
-      <div class="container" data-aos="fade-up">
-        <h2>Begin Your Daily Hisab Journey</h2>
-        <p>
-          Start tracking your income and expenses with confidence, clarity, and
-          control. Hisab Tracker is here to make money management simple for
-          everyone.
-        </p>
-        <a href="#download" class="cta-button">Download Free</a>
-      </div>
-    </section>
+    <h2>7. Security Updates</h2>
+    <p>
+      We regularly update the app to fix vulnerabilities and improve protection against new threats.
+    </p>
+
+    <h2>8. Contact</h2>
+    <p>
+      For any data security related questions, contact us at
+      <strong>helphisabtracker@gmail.com</strong>
+    </p>
+
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer>
@@ -284,7 +227,7 @@
             <h3>Legal</h3>
             <ul class="footer-links">
               <li>
-                <a href="./policy.html"
+                <a href="#"
                   ><i class="fas fa-chevron-right"></i> Privacy Policy</a
                 >
               </li>
@@ -294,7 +237,7 @@
                 >
               </li>
               <li>
-                <a href="./security.html"
+                <a href="#"
                   ><i class="fas fa-chevron-right"></i> Data Security</a
                 >
               </li>
