--- a/pages/term.html
+++ b/pages/term.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hisab Tracker - Your Personal Finance Command Center</title>
+    <title>Privacy Policy - Hisab Tracker</title>
     <meta
       name="description"
       content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
@@ -35,6 +35,7 @@
     <!-- Home Page Specific Styles -->
     <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/term.css" />
   </head>
 
   <body>
@@ -77,120 +78,57 @@
         </div>
       </div>
     </header>
+<section class="terms-page" id="terms">
+  <div class="terms-card">
 
-    <!-- About Section -->
-    <section class="about-hero" id="about">
-      <div class="container">
-        <div class="about-wrapper" data-aos="fade-up">
-          <h1>About Hisab Tracker</h1>
-          <p class="subtitle">
-            Hisab Tracker is a simple and reliable personal finance app designed
-            to help people understand, control, and grow their money with
-            confidence.
-          </p>
-        </div>
-      </div>
-    </section>
+    <h1>Terms of Service</h1>
+    <div class="terms-updated">Last updated: January 2026</div>
 
-    <section class="about-content">
-      <div class="container">
-        <div class="about-grid">
-          <div class="about-text" data-aos="fade-right">
-            <h2>Our Story</h2>
-            <p>
-              Managing money should not be complicated or stressful. Many people
-              want to track their daily expenses but feel overwhelmed by complex
-              apps, internet dependency, and fear of losing their data.
-            </p>
-            <p>
-              Hisab Tracker was created to solve this problem by offering a
-              clean, offline-first, and easy-to-use experience. Whether you are
-              a student, a homemaker, a shop owner, or a working professional,
-              the app helps you keep your financial records safe and organized
-              without any technical knowledge.
-            </p>
-            <p>
-              The goal is simple: make daily money tracking a habit, not a
-              burden.
-            </p>
-          </div>
+    <h2>1. Acceptance of Terms</h2>
+    <p>
+      By downloading or using Hisab Tracker, you agree to be bound by these Terms of Service. 
+      If you do not agree, please do not use the application.
+    </p>
 
-          <div class="about-image" data-aos="fade-left">
-            <i class="fas fa-book-open"></i>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>2. Use of the Application</h2>
+    <p>
+      Hisab Tracker is intended for personal and small business finance tracking only. 
+      It should not be used as a replacement for professional accounting or legal advice.
+    </p>
 
-    <section class="mission-section">
-      <div class="container">
-        <div class="mission-grid">
-          <div class="mission-card" data-aos="zoom-in">
-            <i class="fas fa-bullseye"></i>
-            <h3>Our Mission</h3>
-            <p>
-              To empower individuals and families with a simple tool that brings
-              clarity, discipline, and peace of mind in managing their finances.
-            </p>
-          </div>
+    <h2>3. Data & Privacy</h2>
+    <p>
+      Your financial data remains on your device by default. 
+      Cloud backup and sync are optional. We do not sell or misuse your personal data.
+    </p>
 
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="150">
-            <i class="fas fa-lock"></i>
-            <h3>Privacy & Trust</h3>
-            <p>
-              Your data always belongs to you. Hisab Tracker works offline and
-              gives you full control over when and how your data is backed up or
-              synced.
-            </p>
-          </div>
+    <h2>4. Accuracy of Information</h2>
+    <p>
+      While we strive to provide accurate calculations and reports, 
+      we do not guarantee that the app will be error-free at all times.
+    </p>
 
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="300">
-            <i class="fas fa-lightbulb"></i>
-            <h3>Built for Real Life</h3>
-            <p>
-              Designed for everyday use, with a focus on simplicity, speed, and
-              reliability, even in low or no internet conditions.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>5. Limitation of Liability</h2>
+    <p>
+      Hisab Tracker shall not be held responsible for any financial loss, 
+      data loss, or business decisions made based on information from the app.
+    </p>
 
-    <section class="values-section">
-      <div class="container">
-        <h2 data-aos="fade-up">What We Believe In</h2>
-        <div class="values-list">
-          <div class="value-item" data-aos="fade-up">
-            <i class="fas fa-check-circle"></i>
-            <span>Simplicity over complexity</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="100">
-            <i class="fas fa-check-circle"></i>
-            <span>Security and data ownership</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="200">
-            <i class="fas fa-check-circle"></i>
-            <span>Offline-first reliability</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="300">
-            <i class="fas fa-check-circle"></i>
-            <span>Designed for Indian users and daily needs</span>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>6. Changes to Terms</h2>
+    <p>
+      We may update these terms from time to time. Continued use of the app 
+      means you accept the updated terms.
+    </p>
 
-    <section class="cta-about">
-      <div class="container" data-aos="fade-up">
-        <h2>Begin Your Daily Hisab Journey</h2>
-        <p>
-          Start tracking your income and expenses with confidence, clarity, and
-          control. Hisab Tracker is here to make money management simple for
-          everyone.
-        </p>
-        <a href="#download" class="cta-button">Download Free</a>
-      </div>
-    </section>
+    <h2>7. Contact</h2>
+    <p>
+      For any questions regarding these terms, please contact us at 
+      <strong>helphisabtracker@gmail.com</strong>
+    </p>
+
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer>
@@ -289,7 +227,7 @@
                 >
               </li>
               <li>
-                <a href="./term.html"
+                <a href="#"
                   ><i class="fas fa-chevron-right"></i> Terms of Service</a
                 >
               </li>
