--- a/pages/refund.html
+++ b/pages/refund.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hisab Tracker - Your Personal Finance Command Center</title>
+    <title>Privacy Policy - Hisab Tracker</title>
     <meta
       name="description"
       content="Track all your money offline first. Hisab Tracker works without internet, no sign-up required to start, with smart sync across devices when you're ready."
@@ -34,7 +34,8 @@
     <link rel="stylesheet" href="../styles/shared.css" />
     <!-- Home Page Specific Styles -->
     <link rel="stylesheet" href="../styles/home.css" />
-    <link rel="stylesheet" href="../styles/about.css" />
+    <!-- <link rel="stylesheet" href="../styles/about.css" /> -->
+    <link rel="stylesheet" href="../styles/refund.css" />
   </head>
 
   <body>
@@ -77,120 +78,46 @@
         </div>
       </div>
     </header>
+    <section class="refund-page" id="refund-policy">
+  <div class="terms-card">
 
-    <!-- About Section -->
-    <section class="about-hero" id="about">
-      <div class="container">
-        <div class="about-wrapper" data-aos="fade-up">
-          <h1>About Hisab Tracker</h1>
-          <p class="subtitle">
-            Hisab Tracker is a simple and reliable personal finance app designed
-            to help people understand, control, and grow their money with
-            confidence.
-          </p>
-        </div>
-      </div>
-    </section>
+    <h1>Refund Policy</h1>
+    <div class="terms-updated">Last updated: January 2026</div>
 
-    <section class="about-content">
-      <div class="container">
-        <div class="about-grid">
-          <div class="about-text" data-aos="fade-right">
-            <h2>Our Story</h2>
-            <p>
-              Managing money should not be complicated or stressful. Many people
-              want to track their daily expenses but feel overwhelmed by complex
-              apps, internet dependency, and fear of losing their data.
-            </p>
-            <p>
-              Hisab Tracker was created to solve this problem by offering a
-              clean, offline-first, and easy-to-use experience. Whether you are
-              a student, a homemaker, a shop owner, or a working professional,
-              the app helps you keep your financial records safe and organized
-              without any technical knowledge.
-            </p>
-            <p>
-              The goal is simple: make daily money tracking a habit, not a
-              burden.
-            </p>
-          </div>
+    <h2>1. Six Month Free Trial</h2>
+    <p>
+      Hisab Tracker provides a 6 month free trial with full premium features and complete access.
+      During this trial period, no payment is required from the user.
+    </p>
 
-          <div class="about-image" data-aos="fade-left">
-            <i class="fas fa-book-open"></i>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>2. Subscription After Trial</h2>
+    <p>
+      After the free trial period ends, users may choose to continue with a paid subscription.
+      Once a paid plan is activated, all charges are final and non-refundable.
+    </p>
 
-    <section class="mission-section">
-      <div class="container">
-        <div class="mission-grid">
-          <div class="mission-card" data-aos="zoom-in">
-            <i class="fas fa-bullseye"></i>
-            <h3>Our Mission</h3>
-            <p>
-              To empower individuals and families with a simple tool that brings
-              clarity, discipline, and peace of mind in managing their finances.
-            </p>
-          </div>
+    <h2>3. No Refund Policy</h2>
+    <p>
+      Payments made after the trial period are strictly non-refundable.
+      This includes monthly, 3 month, 6 month, and yearly subscription plans.
+    </p>
 
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="150">
-            <i class="fas fa-lock"></i>
-            <h3>Privacy & Trust</h3>
-            <p>
-              Your data always belongs to you. Hisab Tracker works offline and
-              gives you full control over when and how your data is backed up or
-              synced.
-            </p>
-          </div>
+    <h2>4. App Store Billing</h2>
+    <p>
+      All payments are processed through Google Play Store or Apple App Store.
+      Any billing disputes are subject to their respective platform policies.
+    </p>
 
-          <div class="mission-card" data-aos="zoom-in" data-aos-delay="300">
-            <i class="fas fa-lightbulb"></i>
-            <h3>Built for Real Life</h3>
-            <p>
-              Designed for everyday use, with a focus on simplicity, speed, and
-              reliability, even in low or no internet conditions.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h2>5. Contact</h2>
+    <p>
+      For billing related queries, contact us at
+      <strong>helphisabtracker@gmail.com</strong>.
+      Refund requests will not be accepted after a paid subscription is activated.
+    </p>
 
-    <section class="values-section">
-      <div class="container">
-        <h2 data-aos="fade-up">What We Believe In</h2>
-        <div class="values-list">
-          <div class="value-item" data-aos="fade-up">
-            <i class="fas fa-check-circle"></i>
-            <span>Simplicity over complexity</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="100">
-            <i class="fas fa-check-circle"></i>
-            <span>Security and data ownership</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="200">
-            <i class="fas fa-check-circle"></i>
-            <span>Offline-first reliability</span>
-          </div>
-          <div class="value-item" data-aos="fade-up" data-aos-delay="300">
-            <i class="fas fa-check-circle"></i>
-            <span>Designed for Indian users and daily needs</span>
-          </div>
-        </div>
-      </div>
-    </section>
+  </div>
+</section>
 
-    <section class="cta-about">
-      <div class="container" data-aos="fade-up">
-        <h2>Begin Your Daily Hisab Journey</h2>
-        <p>
-          Start tracking your income and expenses with confidence, clarity, and
-          control. Hisab Tracker is here to make money management simple for
-          everyone.
-        </p>
-        <a href="#download" class="cta-button">Download Free</a>
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer>
@@ -284,7 +211,7 @@
             <h3>Legal</h3>
             <ul class="footer-links">
               <li>
-                <a href="./policy.html"
+                <a href="#"
                   ><i class="fas fa-chevron-right"></i> Privacy Policy</a
                 >
               </li>
@@ -299,7 +226,7 @@
                 >
               </li>
               <li>
-                <a href="./refund.html"
+                <a href="#"
                   ><i class="fas fa-chevron-right"></i> Refund Policy</a
                 >
               </li>
