website brawer added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <button class="theme-toggle" id="themeToggle">
               <i class="fas fa-moon"></i>
             </button>
-            <a href="#download" class="cta-button">Download Free</a>
+            <a href="https://play.google.com/store/apps/details?id=com.hisabtracker" class="cta-button">Download Free</a>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
               <i class="fas fa-bars"></i>
             </button>
@@ -87,11 +87,15 @@
         <i class="fas fa-wifi-slash"></i>
         <span>Works 100% Offline · No Internet Required</span>
       </div>
+<h1 class="hero-title">
+  Your Complete <span class="hero-highlight">Daily Hisab</span><br />
+  In One App. <span class="hero-highlight">No Internet Needed.</span>
+</h1>
 
-      <h1 class="hero-title">
+      <!-- <h1 class="hero-title">
         Your Complete <span class="hero-highlight">Daily Hisab </span> In One App.<br />
          <span class="hero-highlight">No Internet Needed.</span>
-      </h1>
+      </h1> -->
 
       <p class="hero-subtitle">
         Simple, fast and secure money tracking for students, families,
@@ -587,7 +591,7 @@
         </a>
 
         <div class="store-buttons" data-aos="fade-up" data-aos-delay="300">
-          <a href="#" class="store-btn">
+          <a href="https://play.google.com/store/apps/details?id=com.hisabtracker" class="store-btn">
             <i class="fab fa-google-play store-icon"></i>
             <div class="store-text">
               <span>GET IT ON</span>
@@ -595,13 +599,13 @@
             </div>
           </a>
 
-          <a href="#" class="store-btn">
+          <!-- <a href="#" class="store-btn">
             <i class="fab fa-app-store-ios store-icon"></i>
             <div class="store-text">
               <span>Download on the</span>
               <span>App Store</span>
             </div>
-          </a>
+          </a> -->
         </div>
 
         <div class="cta-features" data-aos="fade-up" data-aos-delay="400">
@@ -631,8 +635,7 @@
         <div class="footer-content">
           <div class="footer-column">
             <div class="footer-logo">
-              <i class="fas fa-calculator"></i> Hisab Tr
-              acker
+              <i class="fas fa-calculator"></i> Hisab Tracker
             </div>
             <p class="footer-desc">
               India's most powerful offline-first personal finance app. 
