--- a/pages/term.html
+++ b/pages/term.html
@@ -70,7 +70,7 @@
             <button class="theme-toggle" id="themeToggle">
               <i class="fas fa-moon"></i>
             </button>
-            <a href="#download" class="cta-button">Download Free</a>
+            <a href="https://play.google.com/store/apps/details?id=com.hisabtracker" class="cta-button">Download Free</a>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
               <i class="fas fa-bars"></i>
             </button>
@@ -164,36 +164,37 @@
             </div> -->
           </div>
 
-          <div class="footer-column">
+           <div class="footer-column">
             <h3>Features</h3>
             <ul class="footer-links">
               <li>
-                <a href="#core-features"
+                <a href="../index.html"
                   ><i class="fas fa-chevron-right"></i> Offline Tracking</a
                 >
               </li>
               <li>
-                <a href="#core-features"
+                <a href="../index.html"
                   ><i class="fas fa-chevron-right"></i> Multiple Books</a
                 >
               </li>
               <li>
-                <a href="#advanced-features"
+                <a href="../index.html"
                   ><i class="fas fa-chevron-right"></i> Budget & Goals</a
                 >
               </li>
               <li>
-                <a href="#advanced-features"
+                <a href="../index.html"
                   ><i class="fas fa-chevron-right"></i> Smart Reminders</a
                 >
               </li>
               <li>
-                <a href="#core-features"
+                <a href="../index.html"
                   ><i class="fas fa-chevron-right"></i> Multi-Language</a
                 >
               </li>
             </ul>
           </div>
+
 
           <!-- <div class="footer-column">
             <h3>Resources</h3>
