--- a/pages/policy.html
+++ b/pages/policy.html
@@ -36,6 +36,11 @@
     <link rel="stylesheet" href="../styles/home.css" />
     <link rel="stylesheet" href="../styles/about.css" />
     <link rel="stylesheet" href="../styles/policy.css" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1724414666971091"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -70,7 +75,11 @@
             <button class="theme-toggle" id="themeToggle">
               <i class="fas fa-moon"></i>
             </button>
-            <a href="https://play.google.com/store/apps/details?id=com.hisabtracker" class="cta-button">Download Free</a>
+            <a
+              href="https://play.google.com/store/apps/details?id=com.hisabtracker"
+              class="cta-button"
+              >Download Free</a
+            >
             <button class="mobile-menu-btn" id="mobileMenuBtn">
               <i class="fas fa-bars"></i>
             </button>
@@ -355,201 +364,201 @@
       AOS.init({
         duration: 1000,
         once: true,
-        offset: 100,
-      });
+        offset: 100
+      })
 
       // Initialize Particles.js
-      particlesJS("particles-js", {
+      particlesJS('particles-js', {
         particles: {
           number: { value: 80, density: { enable: true, value_area: 800 } },
-          color: { value: "#00ff88" },
-          shape: { type: "circle" },
+          color: { value: '#00ff88' },
+          shape: { type: 'circle' },
           opacity: { value: 0.3, random: true },
           size: { value: 3, random: true },
           line_linked: {
             enable: true,
             distance: 150,
-            color: "#00ff88",
+            color: '#00ff88',
             opacity: 0.2,
-            width: 1,
+            width: 1
           },
           move: {
             enable: true,
             speed: 2,
-            direction: "none",
+            direction: 'none',
             random: true,
             straight: false,
-            out_mode: "out",
-            bounce: false,
-          },
+            out_mode: 'out',
+            bounce: false
+          }
         },
         interactivity: {
-          detect_on: "canvas",
+          detect_on: 'canvas',
           events: {
-            onhover: { enable: true, mode: "repulse" },
-            onclick: { enable: true, mode: "push" },
-          },
+            onhover: { enable: true, mode: 'repulse' },
+            onclick: { enable: true, mode: 'push' }
+          }
         },
-        retina_detect: true,
-      });
+        retina_detect: true
+      })
 
       // DOM Elements
-      const themeToggle = document.getElementById("themeToggle");
-      const mobileMenuBtn = document.getElementById("mobileMenuBtn");
-      const navMenu = document.getElementById("navMenu");
-      const header = document.getElementById("header");
-      const currentYear = document.getElementById("currentYear");
-      const categoryBtns = document.querySelectorAll(".category-btn");
-      const featureCards = document.querySelectorAll(".feature-card");
-      const statNumbers = document.querySelectorAll(".stat-number");
-      const languageSelect = document.getElementById("languageSelect");
+      const themeToggle = document.getElementById('themeToggle')
+      const mobileMenuBtn = document.getElementById('mobileMenuBtn')
+      const navMenu = document.getElementById('navMenu')
+      const header = document.getElementById('header')
+      const currentYear = document.getElementById('currentYear')
+      const categoryBtns = document.querySelectorAll('.category-btn')
+      const featureCards = document.querySelectorAll('.feature-card')
+      const statNumbers = document.querySelectorAll('.stat-number')
+      const languageSelect = document.getElementById('languageSelect')
 
       // Set current year
-      currentYear.textContent = new Date().getFullYear();
+      currentYear.textContent = new Date().getFullYear()
 
       // Theme toggle
-      themeToggle.addEventListener("click", () => {
-        document.body.classList.toggle("light-theme");
-        const icon = themeToggle.querySelector("i");
-        if (document.body.classList.contains("light-theme")) {
-          icon.classList.remove("fa-moon");
-          icon.classList.add("fa-sun");
+      themeToggle.addEventListener('click', () => {
+        document.body.classList.toggle('light-theme')
+        const icon = themeToggle.querySelector('i')
+        if (document.body.classList.contains('light-theme')) {
+          icon.classList.remove('fa-moon')
+          icon.classList.add('fa-sun')
         } else {
-          icon.classList.remove("fa-sun");
-          icon.classList.add("fa-moon");
+          icon.classList.remove('fa-sun')
+          icon.classList.add('fa-moon')
         }
-      });
+      })
 
       // Mobile menu toggle
-      mobileMenuBtn.addEventListener("click", () => {
-        navMenu.classList.toggle("active");
-        const icon = mobileMenuBtn.querySelector("i");
-        if (navMenu.classList.contains("active")) {
-          icon.classList.remove("fa-bars");
-          icon.classList.add("fa-times");
+      mobileMenuBtn.addEventListener('click', () => {
+        navMenu.classList.toggle('active')
+        const icon = mobileMenuBtn.querySelector('i')
+        if (navMenu.classList.contains('active')) {
+          icon.classList.remove('fa-bars')
+          icon.classList.add('fa-times')
         } else {
-          icon.classList.remove("fa-times");
-          icon.classList.add("fa-bars");
+          icon.classList.remove('fa-times')
+          icon.classList.add('fa-bars')
         }
-      });
+      })
 
       // Header scroll effect
-      window.addEventListener("scroll", () => {
+      window.addEventListener('scroll', () => {
         if (window.scrollY > 50) {
-          header.classList.add("scrolled");
+          header.classList.add('scrolled')
         } else {
-          header.classList.remove("scrolled");
+          header.classList.remove('scrolled')
         }
-      });
+      })
 
       // Feature category filtering
-      categoryBtns.forEach((btn) => {
-        btn.addEventListener("click", () => {
+      categoryBtns.forEach(btn => {
+        btn.addEventListener('click', () => {
           // Remove active class from all buttons
-          categoryBtns.forEach((b) => b.classList.remove("active"));
+          categoryBtns.forEach(b => b.classList.remove('active'))
           // Add active class to clicked button
-          btn.classList.add("active");
+          btn.classList.add('active')
 
-          const category = btn.getAttribute("data-category");
+          const category = btn.getAttribute('data-category')
 
           // Show/hide feature cards based on category
-          featureCards.forEach((card) => {
+          featureCards.forEach(card => {
             if (
-              category === "all" ||
-              card.getAttribute("data-category") === category
+              category === 'all' ||
+              card.getAttribute('data-category') === category
             ) {
-              card.style.display = "block";
+              card.style.display = 'block'
               // Trigger animation
-              card.style.animation = "none";
+              card.style.animation = 'none'
               setTimeout(() => {
-                card.style.animation = "";
-              }, 10);
+                card.style.animation = ''
+              }, 10)
             } else {
-              card.style.display = "none";
+              card.style.display = 'none'
             }
-          });
-        });
-      });
+          })
+        })
+      })
 
       // Animated counters
       function animateCounters() {
-        statNumbers.forEach((stat) => {
-          const target = parseFloat(stat.getAttribute("data-count"));
-          const suffix = stat.textContent.includes(".") ? 1 : 0;
-          const increment = target / 100;
-          let current = 0;
+        statNumbers.forEach(stat => {
+          const target = parseFloat(stat.getAttribute('data-count'))
+          const suffix = stat.textContent.includes('.') ? 1 : 0
+          const increment = target / 100
+          let current = 0
 
           const updateCounter = () => {
             if (current < target) {
-              current += increment;
+              current += increment
               stat.textContent = suffix
                 ? current.toFixed(1)
-                : Math.ceil(current);
-              setTimeout(updateCounter, 20);
+                : Math.ceil(current)
+              setTimeout(updateCounter, 20)
             } else {
-              stat.textContent = suffix ? target.toFixed(1) : target;
+              stat.textContent = suffix ? target.toFixed(1) : target
             }
-          };
+          }
 
-          updateCounter();
-        });
+          updateCounter()
+        })
       }
 
       // Trigger counter animation when stats section is in view
       const observerOptions = {
-        threshold: 0.5,
-      };
+        threshold: 0.5
+      }
 
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach((entry) => {
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
           if (entry.isIntersecting) {
-            animateCounters();
-            observer.unobserve(entry.target);
+            animateCounters()
+            observer.unobserve(entry.target)
           }
-        });
-      }, observerOptions);
+        })
+      }, observerOptions)
 
-      observer.observe(document.getElementById("stats"));
+      observer.observe(document.getElementById('stats'))
 
       // Smooth scrolling for anchor links
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault()
 
-          const targetId = this.getAttribute("href");
-          if (targetId === "#") return;
+          const targetId = this.getAttribute('href')
+          if (targetId === '#') return
 
-          const targetElement = document.querySelector(targetId);
+          const targetElement = document.querySelector(targetId)
           if (targetElement) {
             window.scrollTo({
               top: targetElement.offsetTop - 80,
-              behavior: "smooth",
-            });
+              behavior: 'smooth'
+            })
 
             // Close mobile menu if open
-            if (navMenu.classList.contains("active")) {
-              navMenu.classList.remove("active");
-              mobileMenuBtn.querySelector("i").classList.remove("fa-times");
-              mobileMenuBtn.querySelector("i").classList.add("fa-bars");
+            if (navMenu.classList.contains('active')) {
+              navMenu.classList.remove('active')
+              mobileMenuBtn.querySelector('i').classList.remove('fa-times')
+              mobileMenuBtn.querySelector('i').classList.add('fa-bars')
             }
           }
-        });
-      });
+        })
+      })
 
       // Add floating elements dynamically
       const floatingElementsContainer =
-        document.querySelector(".floating-elements");
+        document.querySelector('.floating-elements')
       for (let i = 0; i < 5; i++) {
-        const element = document.createElement("div");
-        element.className = "floating-element";
-        element.style.width = `${100 + Math.random() * 300}px`;
-        element.style.height = element.style.width;
-        element.style.left = `${Math.random() * 100}%`;
-        element.style.top = `${Math.random() * 100}%`;
+        const element = document.createElement('div')
+        element.className = 'floating-element'
+        element.style.width = `${100 + Math.random() * 300}px`
+        element.style.height = element.style.width
+        element.style.left = `${Math.random() * 100}%`
+        element.style.top = `${Math.random() * 100}%`
         element.style.background =
-          i % 2 === 0 ? "var(--primary-dark)" : "var(--secondary-dark)";
-        element.style.animationDelay = `${Math.random() * 15}s`;
-        floatingElementsContainer.appendChild(element);
+          i % 2 === 0 ? 'var(--primary-dark)' : 'var(--secondary-dark)'
+        element.style.animationDelay = `${Math.random() * 15}s`
+        floatingElementsContainer.appendChild(element)
       }
     </script>
   </body>
